--- a/application/build_model.ipynb
+++ b/application/build_model.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "64972641",
    "metadata": {},
    "outputs": [],
@@ -11,7 +11,7 @@
     "import numpy as np\n",
     "#from google.colab import drive\n",
     "\n",
-    "data_path = '../data'\n",
+    "data_path = './data'\n",
     "\n",
     "#drive.mount('/content/drive')\n",
     "dataDict = {}\n",
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "25f212e6",
    "metadata": {},
    "outputs": [
@@ -199,7 +199,7 @@
        "4      32.9   28.9   --       East        1  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -214,7 +214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "618289f8",
    "metadata": {},
    "outputs": [
@@ -275,7 +275,7 @@
        "      <td>87.9</td>\n",
        "      <td>32.4</td>\n",
        "      <td>30.7</td>\n",
-       "      <td>50.0</td>\n",
+       "      <td>50.1</td>\n",
        "      <td>East</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
@@ -295,7 +295,7 @@
        "      <td>87.7</td>\n",
        "      <td>34.4</td>\n",
        "      <td>26.1</td>\n",
-       "      <td>50.0</td>\n",
+       "      <td>50.1</td>\n",
        "      <td>East</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
@@ -315,7 +315,7 @@
        "      <td>86.3</td>\n",
        "      <td>32.2</td>\n",
        "      <td>27.3</td>\n",
-       "      <td>50.0</td>\n",
+       "      <td>50.1</td>\n",
        "      <td>West</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
@@ -335,7 +335,7 @@
        "      <td>85.4</td>\n",
        "      <td>30.0</td>\n",
        "      <td>30.3</td>\n",
-       "      <td>50.0</td>\n",
+       "      <td>50.1</td>\n",
        "      <td>East</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
@@ -355,7 +355,7 @@
        "      <td>85.5</td>\n",
        "      <td>32.9</td>\n",
        "      <td>28.9</td>\n",
-       "      <td>50.0</td>\n",
+       "      <td>50.1</td>\n",
        "      <td>East</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
@@ -379,14 +379,14 @@
        "4    Detroit Red Wings  19921993   4.39   3.33  24.9  81.2     22.7     85.5   \n",
        "\n",
        "   Shots/GP  SA/GP  FOW% Conference  Playoff  \n",
-       "0      32.4   30.7  50.0       East        1  \n",
-       "1      34.4   26.1  50.0       East        1  \n",
-       "2      32.2   27.3  50.0       West        1  \n",
-       "3      30.0   30.3  50.0       East        1  \n",
-       "4      32.9   28.9  50.0       East        1  "
+       "0      32.4   30.7  50.1       East        1  \n",
+       "1      34.4   26.1  50.1       East        1  \n",
+       "2      32.2   27.3  50.1       West        1  \n",
+       "3      30.0   30.3  50.1       East        1  \n",
+       "4      32.9   28.9  50.1       East        1  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -408,7 +408,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "615babe7",
    "metadata": {},
    "outputs": [
@@ -455,7 +455,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "id": "4bf29ee0",
    "metadata": {},
    "outputs": [
@@ -732,7 +732,7 @@
        "WSH   19921993  0.140111  0.516674  0.342776            0.047075"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -842,7 +842,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "id": "6c14f5a1",
    "metadata": {},
    "outputs": [],
@@ -876,7 +876,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "id": "ea5b7280",
    "metadata": {},
    "outputs": [
@@ -912,7 +912,7 @@
        "[813 rows x 7 columns]>"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -938,229 +938,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "id": "4c7420e5",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Team</th>\n",
-       "      <th>Season</th>\n",
-       "      <th>PIM</th>\n",
-       "      <th>Forward</th>\n",
-       "      <th>Defense</th>\n",
-       "      <th>goalie_performance</th>\n",
-       "      <th>star_player</th>\n",
-       "      <th>Unnamed: 0.1</th>\n",
-       "      <th>Unnamed: 0.1.1</th>\n",
-       "      <th>Unnamed: 0.1.1.1</th>\n",
-       "      <th>...</th>\n",
-       "      <th>GA/GP</th>\n",
-       "      <th>PP%</th>\n",
-       "      <th>PK%</th>\n",
-       "      <th>Net PP%</th>\n",
-       "      <th>Net PK%</th>\n",
-       "      <th>Shots/GP</th>\n",
-       "      <th>SA/GP</th>\n",
-       "      <th>FOW%</th>\n",
-       "      <th>Conference</th>\n",
-       "      <th>Playoff</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>Boston Bruins</td>\n",
-       "      <td>19921993</td>\n",
-       "      <td>0.103733</td>\n",
-       "      <td>0.527377</td>\n",
-       "      <td>0.302080</td>\n",
-       "      <td>0.056051</td>\n",
-       "      <td>4.0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>...</td>\n",
-       "      <td>3.19</td>\n",
-       "      <td>20.9</td>\n",
-       "      <td>83.1</td>\n",
-       "      <td>19.1</td>\n",
-       "      <td>87.7</td>\n",
-       "      <td>34.4</td>\n",
-       "      <td>26.1</td>\n",
-       "      <td>50.0</td>\n",
-       "      <td>East</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>Buffalo Sabres</td>\n",
-       "      <td>19921993</td>\n",
-       "      <td>0.141639</td>\n",
-       "      <td>0.582017</td>\n",
-       "      <td>0.281885</td>\n",
-       "      <td>0.058857</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>14</td>\n",
-       "      <td>14</td>\n",
-       "      <td>14</td>\n",
-       "      <td>...</td>\n",
-       "      <td>3.54</td>\n",
-       "      <td>20.3</td>\n",
-       "      <td>83.5</td>\n",
-       "      <td>16.7</td>\n",
-       "      <td>86.5</td>\n",
-       "      <td>31.8</td>\n",
-       "      <td>31.9</td>\n",
-       "      <td>50.0</td>\n",
-       "      <td>East</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>Calgary Flames</td>\n",
-       "      <td>19921993</td>\n",
-       "      <td>0.154408</td>\n",
-       "      <td>0.597382</td>\n",
-       "      <td>0.341503</td>\n",
-       "      <td>0.042614</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>8</td>\n",
-       "      <td>8</td>\n",
-       "      <td>8</td>\n",
-       "      <td>...</td>\n",
-       "      <td>3.36</td>\n",
-       "      <td>19.0</td>\n",
-       "      <td>83.1</td>\n",
-       "      <td>17.0</td>\n",
-       "      <td>86.2</td>\n",
-       "      <td>31.4</td>\n",
-       "      <td>29.5</td>\n",
-       "      <td>50.0</td>\n",
-       "      <td>West</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>Chicago Blackhawks</td>\n",
-       "      <td>19921993</td>\n",
-       "      <td>0.182986</td>\n",
-       "      <td>0.486612</td>\n",
-       "      <td>0.337193</td>\n",
-       "      <td>0.033927</td>\n",
-       "      <td>5.0</td>\n",
-       "      <td>2</td>\n",
-       "      <td>2</td>\n",
-       "      <td>2</td>\n",
-       "      <td>...</td>\n",
-       "      <td>2.74</td>\n",
-       "      <td>18.4</td>\n",
-       "      <td>83.5</td>\n",
-       "      <td>16.5</td>\n",
-       "      <td>86.3</td>\n",
-       "      <td>32.2</td>\n",
-       "      <td>27.3</td>\n",
-       "      <td>50.0</td>\n",
-       "      <td>West</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>Detroit Red Wings</td>\n",
-       "      <td>19921993</td>\n",
-       "      <td>0.161925</td>\n",
-       "      <td>0.694144</td>\n",
-       "      <td>0.358354</td>\n",
-       "      <td>0.032296</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>4</td>\n",
-       "      <td>4</td>\n",
-       "      <td>4</td>\n",
-       "      <td>...</td>\n",
-       "      <td>3.33</td>\n",
-       "      <td>24.9</td>\n",
-       "      <td>81.2</td>\n",
-       "      <td>22.7</td>\n",
-       "      <td>85.5</td>\n",
-       "      <td>32.9</td>\n",
-       "      <td>28.9</td>\n",
-       "      <td>50.0</td>\n",
-       "      <td>East</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>5 rows × 21 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                 Team    Season       PIM   Forward   Defense  \\\n",
-       "0       Boston Bruins  19921993  0.103733  0.527377  0.302080   \n",
-       "1      Buffalo Sabres  19921993  0.141639  0.582017  0.281885   \n",
-       "2      Calgary Flames  19921993  0.154408  0.597382  0.341503   \n",
-       "3  Chicago Blackhawks  19921993  0.182986  0.486612  0.337193   \n",
-       "4   Detroit Red Wings  19921993  0.161925  0.694144  0.358354   \n",
-       "\n",
-       "   goalie_performance  star_player  Unnamed: 0.1  Unnamed: 0.1.1  \\\n",
-       "0            0.056051          4.0             1               1   \n",
-       "1            0.058857          3.0            14              14   \n",
-       "2            0.042614          3.0             8               8   \n",
-       "3            0.033927          5.0             2               2   \n",
-       "4            0.032296          3.0             4               4   \n",
-       "\n",
-       "   Unnamed: 0.1.1.1  ...  GA/GP   PP%   PK%  Net PP%  Net PK%  Shots/GP  \\\n",
-       "0                 1  ...   3.19  20.9  83.1     19.1     87.7      34.4   \n",
-       "1                14  ...   3.54  20.3  83.5     16.7     86.5      31.8   \n",
-       "2                 8  ...   3.36  19.0  83.1     17.0     86.2      31.4   \n",
-       "3                 2  ...   2.74  18.4  83.5     16.5     86.3      32.2   \n",
-       "4                 4  ...   3.33  24.9  81.2     22.7     85.5      32.9   \n",
-       "\n",
-       "   SA/GP  FOW%  Conference Playoff  \n",
-       "0   26.1  50.0        East       1  \n",
-       "1   31.9  50.0        East       1  \n",
-       "2   29.5  50.0        West       1  \n",
-       "3   27.3  50.0        West       1  \n",
-       "4   28.9  50.0        East       1  \n",
-       "\n",
-       "[5 rows x 21 columns]"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "#combine skaters and teams dataframe\n",
     "team_data=pd.merge(skaters_performance_perteam,allData,on=['Team','Season'])\n",
     "team_data.drop(['Unnamed: 0'], axis=1, inplace=True)\n",
     "team_data=team_data.fillna(0)\n",
     "team_data=team_data.replace(to_replace = '--', value = 0)\n",
-    "team_data.head()"
+    "team_data.head()\n",
+    "team_data.to_csv('./preprocessed_data.csv', index=False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "id": "5e243d34",
    "metadata": {},
    "outputs": [
