--- a/application/build_model.ipynb
+++ b/application/build_model.ipynb
@@ -11,9 +11,8 @@
     "import numpy as np\n",
     "#from google.colab import drive\n",
     "\n",
-    "data_path = './data'\n",
-    "\n",
     "#drive.mount('/content/drive')\n",
+    "data_path = './data'\n",
     "dataDict = {}\n",
     "for year in range(1992,2021):\n",
     "    if year == 2004:\n",
@@ -22,6 +21,22 @@
     "    nextYear = str(nextYear)\n",
     "    nextYear = nextYear[2:]\n",
     "    data = pd.read_csv(f'{data_path}/NHL_Data/{str(year)}-{nextYear}.csv')\n",
+    "    playoffList = data['Playoff'].tolist()\n",
+    "  \n",
+    "    pointsList = data['P'].tolist()\n",
+    "    for index in range(len(playoffList)):\n",
+    "        if index == 0:\n",
+    "            continue\n",
+    "        if playoffList[index] == 0 and playoffList[index-1] == 1:\n",
+    "            counter = 1\n",
+    "            while pointsList[index + counter] >= (pointsList[index] - 5):\n",
+    "                playoffList[index + counter] = 2\n",
+    "                counter += 1\n",
+    "            while (pointsList[index] + 5) >= pointsList[index - counter]:\n",
+    "                playoffList[index - counter] = 2\n",
+    "                counter += 1\n",
+    "            break\n",
+    "    data['Playoff']=playoffList  \n",
     "    dataDict[year] = data"
    ]
   },
@@ -463,7 +478,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/home/hiipivahalko/anaconda3/lib/python3.8/site-packages/pandas/core/series.py:4509: SettingWithCopyWarning: \n",
+      "/Users/ossi/opt/anaconda3/lib/python3.8/site-packages/pandas/core/series.py:4509: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
@@ -938,18 +953,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 12,
    "id": "4c7420e5",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Team                  Boston Bruins\n",
+       "Season                     19921993\n",
+       "PIM                        0.103733\n",
+       "Forward                    0.527377\n",
+       "Defense                     0.30208\n",
+       "goalie_performance         0.056051\n",
+       "star_player                     4.0\n",
+       "Unnamed: 0.1                      1\n",
+       "Unnamed: 0.1.1                    1\n",
+       "Unnamed: 0.1.1.1                  1\n",
+       "GF/GP                          3.95\n",
+       "GA/GP                          3.19\n",
+       "PP%                            20.9\n",
+       "PK%                            83.1\n",
+       "Net PP%                        19.1\n",
+       "Net PK%                        87.7\n",
+       "Shots/GP                       34.4\n",
+       "SA/GP                          26.1\n",
+       "FOW%                           50.1\n",
+       "Conference                     East\n",
+       "Playoff                           1\n",
+       "Name: 0, dtype: object"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "#combine skaters and teams dataframe\n",
     "team_data=pd.merge(skaters_performance_perteam,allData,on=['Team','Season'])\n",
     "team_data.drop(['Unnamed: 0'], axis=1, inplace=True)\n",
     "team_data=team_data.fillna(0)\n",
     "team_data=team_data.replace(to_replace = '--', value = 0)\n",
-    "team_data.head()\n",
-    "team_data.to_csv('./preprocessed_data.csv', index=False)"
+    "\n",
+    "team_data.to_csv('./preprocessed_data.csv', index=False)\n",
+    "team_data.iloc[0]"
    ]
   },
   {
@@ -962,7 +1010,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy 0.902\n"
+      "Accuracy 0.730\n"
      ]
     }
    ],
